<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kuriersmacznego.jsonstatham.example.com.kuriersmacznego.OrderActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/restaurantTitle"
        android:textSize="@dimen/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantTitle"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/restaurantInfo"
        android:textSize="@dimen/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="17dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/restaurantTitle"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/restaurantTitle"
        android:layout_marginLeft="17dp" />

    <Button
        android:id="@+id/goToMapRestaurant"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/goToMapRestaurant"
        android:textSize="12dp"
        android:layout_marginEnd="9dp"
        android:onClick="onClickGoToMapRestaurant"
        app:layout_constraintRight_toLeftOf="@+id/received"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/goToMapClient"
        android:layout_marginTop="206dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="205dp"
        app:layout_constraintLeft_toLeftOf="@+id/clientTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="9dp" />

    <Button
        android:id="@+id/received"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:text="@string/received"
        android:layout_marginEnd="17dp"
        android:textSize="12dp"
        android:onClick="onClickReceived"
        android:background="@color/redColorButton"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/goToMapRestaurant"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="17dp" />

    <TextView
        android:id="@+id/clientTitle"
        android:textSize="@dimen/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientTitle"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/goToMapRestaurant"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/clientInfo"
        android:textSize="@dimen/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/clientTitle"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/clientTitle"
        android:layout_marginLeft="17dp" />

    <Button
        android:id="@+id/delivered"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="87dp"
        android:text="@string/delivered"
        android:textSize="12dp"
        android:onClick="onClickDelivered"
        android:background="@color/redColorButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="87dp" />

    <Button
        android:id="@+id/goToMapClient"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/goToMapClient"
        android:textSize="12dp"
        android:onClick="onClickGoToMapClient"
        android:layout_marginStart="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

</android.support.constraint.ConstraintLayout>
