<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kuriersmacznego.jsonstatham.example.com.kuriersmacznego.MainActivity">

    <ScrollView
        android:id="@+id/main_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/comunication_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/txtLokalizacja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wyswietl_wspolrzedne"
                    android:textAlignment="center" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnWyslijWspolrzedne"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_wyslij_wspolrzedne"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPokazZamowienia"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_pokaz_zamowienia"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>